--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/OlaniyiHope/hope.git",
+  "homepage": "http://github.com/OlaniyiHope/hope.git",
   "name": "hope",
   "version": "0.1.0",
   "private": true,
