--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hope",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://olaniyihope.github.io/hope",
+  "homepage": "https://github.com/OlaniyiHope/hope.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
