--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "8.10.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
