--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "mdb-react-ui-kit": "^4.0.0",
