--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "node": "14.17.0",
     "npm": "8.10.0"
   },
-
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^14.2.1",
+    "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
     "mdb-react-ui-kit": "^4.0.0",
     "react": "^18.0.0",
@@ -35,10 +35,12 @@
     "server": "json-server --watch db.json --port 5000 && node server.js"
   },
   "eslintConfig": {
-      "plugins": ["react-hooks"],
-      "rules": {
-        "react-hooks/exhaustive-deps": 0
-        },
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": 0
+    },
     "extends": [
       "react-app",
       "react-app/jest"
