--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "mdb-react-ui-kit": "^4.1.0",
+    "netlify-plugin-cloudinary": "^1.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
